[package]
edition      = "2024"
name         = "deep-sleep-stuck"
rust-version = "1.88"
version      = "0.1.0"

[dependencies]
esp-hal = { version = "~1.1.0-rc.0", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp32c6",
] }

esp-radio = { version = "0.18.0", features = [
    "esp32c6",
    "ieee802154",
    "defmt",
    "unstable",
] }
ieee802154 = "0.6.1"

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c6"] }

embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-sync     = { version = "0.8.0", features = ["defmt"] }
embassy-time     = { version = "0.5.0", features = ["defmt"] }
embassy-futures  = "0.1.2"
esp-alloc        = { version = "0.10.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target       = { version = "0.6.2", features = ["defmt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
heapless = { version = "0.9.2", features = ["defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }

esp-hal = { package = "esp-hal", git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
esp-rom-sys = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
esp-sync = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
esp-radio = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
esp-radio-rtos-driver = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
esp-phy = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
esp-hal-procmacros = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
esp-metadata-generated = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
esp-config = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }